SET(SOURCES
  unit_testing.cpp
  variables_test.cpp
  instances_test.cpp
  data_set_test.cpp
  plug_in_test.cpp
  ordinary_differential_equations_test.cpp
  mathematical_model_test.cpp
  unscaling_layer_test.cpp
  scaling_layer_test.cpp
  probabilistic_layer_test.cpp
  perceptron_layer_test.cpp
  perceptron_test.cpp
  neural_network_test.cpp
  multilayer_perceptron_test.cpp
  inputs_test.cpp
  outputs_test.cpp
  independent_parameters_test.cpp
  conditions_layer_test.cpp
  bounding_layer_test.cpp
  sum_squared_error_test.cpp
  root_mean_squared_error_test.cpp
  solutions_error_test.cpp
  performance_term_test.cpp
  mock_performance_term.cpp
  performance_functional_test.cpp
  outputs_integrals_test.cpp
  normalized_squared_error_test.cpp
  neural_parameters_norm_test.cpp
  minkowski_error_test.cpp
  mean_squared_error_test.cpp
  inverse_sum_squared_error_test.cpp
  independent_parameters_error_test.cpp
  final_solutions_error_test.cpp
  cross_entropy_error_test.cpp
  training_strategy_test.cpp
  training_rate_algorithm_test.cpp
  mock_training_algorithm.cpp
  training_algorithm_test.cpp
  random_search_test.cpp
  quasi_newton_method_test.cpp
  newton_method_test.cpp
  levenberg_marquardt_algorithm_test.cpp
  gradient_descent_test.cpp
  evolutionary_algorithm_test.cpp
  conjugate_gradient_test.cpp
  testing_analysis_test.cpp
  vector_test.cpp
  matrix_test.cpp
  numerical_integration_test.cpp
  numerical_differentiation_test.cpp
  linear_algebraic_equations_test.cpp
  model_selection_test.cpp
  main.cpp
)

add_executable(opennntests ${SOURCES})
target_link_libraries(opennntests opennn tinyxml2)